[package]
name = "rmpub"
version = "0.1.0"
edition = "2021"

[lints.clippy]
# Allow cfg(windows) on inside module and on import.
duplicated_attributes = "allow"

[dependencies]
aes = "0.8"
anyhow = "1.0.101"
base64 = "0.22"
byteorder = "1.5.0"
cbc = { version = "0.1", features = ["alloc"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.9"
flate2 = "1.0"
hex = "0.4.3"
jiff = "0.2.20"
log = "0.4.29"
quick-xml = "0.37"
reqwest = { version = "0.12", features = ["blocking"] }
roxmltree = "0.21.1"
rsa = "0.9.10"
sha1 = "0.10"
zip = "8.1.0"

[target.'cfg(windows)'.dependencies]
windows-registry = "0.6.1"
windows-strings = "0.5.1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation",
]

